Добавлены декоративные элементы и состояния, кроме блока с фильтрами

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <div class="page-container">
       <header class="page-header">
         <nav class="navigation">
-          <a class="logo" href="#">
-            <img src="images/logo.svg" width="140" height="70" alt="Логотип">
+          <a class="navigation-logo" href="#">
+            <img class="logo" src="images/logo.svg" width="140" height="70" alt="Логотип">
           </a>
           <ul class="navigation-list">
             <li class="navigation-item">
@@ -47,7 +47,6 @@
         <section class="hero">
           <h1 class="visually-hidden">Курортный город Седона.</h1>
           <img class="hero-title" src="images/hero/welcome.svg" width="458" height="352" alt="Welcome to the gorgerous Sedona, because Grand Canyon sucks!">
-
         </section>
 
         <section class="advantages">
@@ -59,6 +58,7 @@
             <li class="advantages-item-picture color-basic">
               <div class="description-element">
                 <h3 class="advantages-heading">Настоящий городок</h3>
+                <div class="advantages-line"></div>
                 <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
               </div>
               <img class="advantage-image" src="images/advantages/real-town.jpg" width="800" height="385" alt="Вид на дом из сада">
@@ -66,18 +66,21 @@
             <li class="advantages-item color-light">
               <div class="description-element">
                 <h3 class="advantages-heading">Небольшая площадь</h3>
+                <div class="advantages-line"></div>
                 <p class="advantages-description">Все достопримечательности находятся очень близко</p>
               </div>
             </li>
             <li class="advantages-item color-pale">
               <div class="description-element">
                 <h3 class="advantages-heading">Красивая<br> дорога</h3>
+                <div class="advantages-line"></div>
                 <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
               </div>
             </li>
             <li class="advantages-item color-light">
               <div class="description-element">
                 <h3 class="advantages-heading">Мало<br> туристов</h3>
+                <div class="advantages-line"></div>
                 <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
               </div>
             </li>
@@ -85,6 +88,7 @@
               <img class="advantage-image" src="images/advantages/bridge-devil.jpg" width="800" height="385" alt="Вид на каньон">
               <div class="description-element">
                 <h3 class="advantages-heading">Там есть<br> мост дьявола</h3>
+                <div class="advantages-line"></div>
                 <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
               </div>
             </li>
@@ -99,18 +103,21 @@
           <ul class="services-list">
             <li class="services-item color-light">
               <div class="description-element">
+                <div class="services-housing"></div>
                 <h3 class="services-heading">Жильё</h3>
                 <p class="services-description">Рекомендуем пожить<br> в настоящем мотеле,<br> всё как в кино!</p>
               </div>
             </li>
             <li class="services-item">
               <div class="description-element">
+                <div class="services-food"></div>
                 <h3 class="services-heading">Еда</h3>
                 <p class="services-description">Всегда заказывайте<br> топовый фирменный бургер,<br> вы не разочаруетесь!</p>
               </div>
             </li>
             <li class="services-item color-light">
               <div class="description-element">
+                <div class="services-souvenirs"></div>
                 <h3 class="services-heading">Сувениры</h3>
                 <p class="services-description">Не только китайского,<br> но и настоящего местного производства!</p>
               </div>
