--- a/catalog.html
+++ b/catalog.html
@@ -9,8 +9,8 @@
     <div class="page-container">
       <header class="page-header">
         <nav class="navigation">
-          <a class="logo" href="#">
-            <img src="images/logo.svg" width="140" height="70" alt="Логотип">
+          <a class="navigation-logo" href="#">
+            <img class="logo" src="images/logo.svg" width="140" height="70" alt="Логотип">
           </a>
           <ul class="navigation-list">
             <li class="navigation-item">
