Добавлены декоративные элементы и состояния на страницу каталога после проверки

--- a/catalog.html
+++ b/catalog.html
@@ -47,12 +47,12 @@
           <section class="catalog-title">
             <h1 class="catalog-heading">Гостиницы Седоны</h1>
             <ol class="breadcrumbs">
-              <li class="breadcrumbs-item">
+              <li class="breadcrumbs-item breadcrumbs-item-home">
                 <a class="breadcrumbs-link breadcrumbs-link-home" href="index.html">
-                     <span class="visually-hidden">Главная.</span>
+                  <span class="visually-hidden">Главная.</span>
                 </a>
               </li>
-              <li class="breadcrumbs-item">
+              <li class="breadcrumbs-item breadcrumbs-item-hotels">
                 <a class="breadcrumbs-link breadcrumbs-link-hotels" href="#">
                   Гостиницы
                 </a>
@@ -158,87 +158,78 @@
           </div>
 
           <ul class="product-list">
+
             <li class="product-item">
-              <a class="product-image-link" href="#">
+              <a class="product-image-link" href="#" tabindex=-1>
                 <img class="product-image" src="images/cards/amara.jpg" width="300" height="212" alt="Вид звездного неба из ущелья">
               </a>
-              <a class="product-link">
+              <a class="product-title-link" href="#" tabindex=-1>
                 <h3 class="product-title">Amara Resort & Spa</h3>
               </a>
               <span class="product-type">Гостиница</span>
               <span class="product-price">От 4000 ₽</span>
               <a class="product-more" href="#">Подробнее</a>
               <button class="product-to-favorites" type="button">В Избранное</button>
-              <div class="product-starsbox">
+              <div class="product-starsbox four-stars">
                 <span class="visually-hidden">Четыре звезды</span>
-                <div class="product-star"></div>
-                <div class="product-star"></div>
-                <div class="product-star"></div>
-                <div class="product-star"></div>
               </div>
               <span class="product-rating">Рейтинг: <span class="product-raiting-value">8,5</span></span>
             </li>
+
             <li class="product-item">
-              <a class="product-image-link" href="#">
+              <a class="product-image-link" href="#" tabindex=-1>
                 <img class="product-image" src="images/cards/villas-diablo.jpg" width="300" height="212" alt="Вид на гору, пасмурное небо и радугу">
               </a>
-              <a class="product-link">
+              <a class="product-title-link" href="#" tabindex=-1>
                 <h3 class="product-title">Villas at Poco Diablo</h3>
               </a>
               <span class="product-type">Гостиница</span>
               <span class="product-price">От 5000 ₽</span>
               <a class="product-more" href="#">Подробнее</a>
               <button class="product-in-favorites" type="button">В Избранном</button>
-              <div class="product-starsbox">
+              <div class="product-starsbox four-stars">
                 <span class="visually-hidden">Четыре звезды</span>
-                <div class="product-star"></div>
-                <div class="product-star"></div>
-                <div class="product-star"></div>
-                <div class="product-star"></div>
               </div>
               <span class="product-rating">Рейтинг: <span class="product-raiting-value">9,2</span></span>
             </li>
+
             <li class="product-item">
-              <a class="product-image-link" href="#">
+              <a class="product-image-link" href="#" tabindex=-1>
                 <img class="product-image" src="images/cards/desert.jpg" width="300" height="212" alt="Вид на гору, ясная погода">
               </a>
-              <a class="product-link">
+              <a class="product-title-link" href="#" tabindex=-1>
                 <h3 class="product-title">Desert Quail Inn</h3>
               </a>
               <span class="product-type">Гостиница</span>
               <span class="product-price">От 2500 ₽</span>
               <a class="product-more" href="#">Подробнее</a>
               <button class="product-to-favorites" type="button">В Избранное</button>
-              <div class="product-starsbox">
+              <div class="product-starsbox three-stars">
                 <span class="visually-hidden">Три звезды</span>
-                <div class="product-star"></div>
-                <div class="product-star"></div>
-                <div class="product-star"></div>
               </div>
               <span class="product-rating">Рейтинг: <span class="product-raiting-value">6,9</span></span>
             </li>
+
             <li class="product-item">
-              <a class="product-image-link" href="#">
+              <a class="product-image-link" href="#" tabindex=-1>
                 <img class="product-image" src="images/cards/green-tree.jpg" width="300" height="212" alt="Вид на гору ночью">
               </a>
-              <a class="product-link">
+              <a class="product-title-link"  href="#" tabindex=-1>
                 <h3 class="product-title">GreenTree Inn</h3>
               </a>
               <span class="product-type">Гостиница</span>
               <span class="product-price">От 1500 ₽</span>
               <a class="product-more" href="#">Подробнее</a>
               <button class="product-to-favorites" type="button">В Избранное</button>
-              <div class="product-starsbox">
+              <div class="product-starsbox two-stars">
                 <span class="visually-hidden">Две звезды</span>
-                <div class="product-star"></div>
-                <div class="product-star"></div>
               </div>
               <span class="product-rating">Рейтинг: <span class="product-raiting-value">5,0</span></span>
             </li>
           </ul>
           <ul class="pagination">
             <li class="pagination-item">
-              <a class="pagination-link pagination-current" href="#">1</a>
+              <a class="pagination-link pagination-current">1</a>
             </li>
             <li class="pagination-item">
               <a class="pagination-link" href="#">2</a>
