Стилизация фильтров в каталоге

--- a/catalog.html
+++ b/catalog.html
@@ -114,11 +114,13 @@
 
               <fieldset class="catalog-filter-group cost">
                 <legend class="catalog-filter-title">Стоимость, ₽:</legend>
-                  <label class="control" >от
-                    <input class="control-input cost-field from" type="number" name="min-price" value="0">
+                  <label class="control-cost">
+                    <input class="control-input cost-field cost-from" type="number" name="min-price" value="0">
+                    <span class="cost-text">от</span>
                   </label>
-                  <label class="control">до
-                    <input class="control-input cost-field to" type="number" name="max-price" value="9000">
+                  <label class="control-cost">
+                    <input class="control-input cost-field cost-to" type="number" name="max-price" value="9000">
+                    <span class="cost-text">до</span>
                   </label>
               </fieldset>
 
