Стилизация checked в фильтрах

--- a/catalog.html
+++ b/catalog.html
@@ -68,24 +68,21 @@
                 <legend class="catalog-filter-title">Инфраструктура:</legend>
                   <ul class="catalog-filter-list">
                     <li class="catalog-filter-item">
-                      <label class="control">
-                        <span class="control-checkbox"></span>
-                        <input class="control-input" type="checkbox" name="pool" checked>
-                          Бассейн
+                      <label class="control-element">
+                        <input class="control-input-infrastructure" type="checkbox" name="pool" checked>
+                        <span class="control-text">Бассейн</span>
                       </label>
                     </li>
                     <li class="catalog-filter-item">
-                      <label class="control">
-                        <span class="control-checkbox"></span>
-                        <input class="control-input" type="checkbox" name="parking" checked>
-                        Парковка
+                      <label class="control-element">
+                        <input class="control-input-infrastructure" type="checkbox" name="parking" checked>
+                        <span class="control-text">Парковка</span>
                       </label>
                     </li>
                     <li class="catalog-filter-item">
-                      <label class="control">
-                        <span class="control-checkbox"></span>
-                        <input class="control-input" type="checkbox" name="wi-fi">
-                        Wi-Fi
+                      <label class="control-element">
+                        <input class="control-input-infrastructure" type="checkbox" name="wi-fi">
+                        <span class="control-text">Wi-Fi</span>
                       </label>
                     </li>
                   </ul>
@@ -95,21 +92,21 @@
                 <legend class="catalog-filter-title">Тип жилья:</legend>
                   <ul class="catalog-filter-list">
                     <li class="catalog-filter-item">
-                      <label class="control">
-                        <input class="control-input" type="radio" name="housing" value="hotel" checked>
-                        Гостиница
+                      <label class="control-element">
+                        <input class="control-input-housing" type="radio" name="housing" value="hotel" checked>
+                        <span class="control-text">Гостиница</span>
                       </label>
                     </li>
                     <li class="catalog-filter-item">
-                      <label class="control">
-                        <input class="control-input" type="radio" name="housing" value="motel">
-                        Мотель
+                      <label class="control-element">
+                        <input class="control-input-housing" type="radio" name="housing" value="motel">
+                        <span class="control-text">Мотель</span>
                       </label>
                     </li>
                     <li class="catalog-filter-item">
-                      <label class="control">
-                        <input class="control-input" type="radio" name="housing" value="apartments">
-                        Апартаменты
+                      <label class="control-element">
+                        <input class="control-input-housing" type="radio" name="housing" value="apartments">
+                        <span class="control-text">Апартаменты</span>
                       </label>
                     </li>
                   </ul>
@@ -119,11 +116,11 @@
                 <legend class="catalog-filter-title">Стоимость, ₽:</legend>
                   <div class="cost-min-max">
                     <label class="control-cost">
-                      <input class="control-input cost-field cost-from" type="number" name="min-price" value="0">
+                      <input class="control-input-cost cost-field cost-from" type="number" name="min-price" value="0">
                       <span class="cost-text">от</span>
                     </label>
                     <label class="control-cost">
-                      <input class="control-input cost-field cost-to" type="number" name="max-price" value="9000">
+                      <input class="control-input-cost cost-field cost-to" type="number" name="max-price" value="9000">
                       <span class="cost-text">до</span>
                     </label>
                   </div>
