--- a/catalog.html
+++ b/catalog.html
@@ -323,7 +323,7 @@
             <path d="M109.4 27.3564L105.8 18.4564H103.6L108.4 30.0564C108.1 30.9564 107.7 31.2564 106.7 31.2564H104.2V33.2564H106.7C108.5 33.2564 109.5 32.4564 110.2 30.6564L114.9 18.4564H112.8L109.4 27.3564Z"/>
             </svg>
         </a>
-      </footer>>
+      </footer>
     </div>
   </body>
 </html>
