Стилизация формы фильтры, состояния для формы подписки, разметка модального окна

--- a/index.html
+++ b/index.html
@@ -195,24 +195,30 @@
         <section class="modal-content">
           <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
           <form class="search-form" action="https://echo.htmlacademy.ru/" method="get">
-            <label class="search-form-field">
-              <span class="date-label">Дата заезда</span>
+            <label class="search-form-date">
+              <span class="date-label">Дата заезда:</span>
               <input class="date-field" type="date" name="date-field" value="2020-04-27" required>
             </label>
             <p class="error-message">Мы не можем отправить вас в прошлое.</p>
-            <label class="search-form-field">
-              <span class="date-label">Дата выезда</span>
+            <label class="search-form-date">
+              <span class="date-label">Дата выезда:</span>
               <input class="date-field" type="date" name="date-field" value="2023-09-01" required>
             </label>
-            <p class="success-message">На эти даты есть свободные номера. Пока есть</p>
-            <label class="search-form-field">
-              <span class="date-label">Взрослые:</span>
-              <input class="date-field" type="number" name="date-field" value="2024-09-01" required>
-            </label>
-            <label class="search-form-field">
-              <span class="date-label">Дети:</span>
-              <input class="date-field" type="number" name="date-field" value="2024-09-01" required>
-            </label>
+            <p class="success-message">На эти даты есть свободные номера. Пока есть.</p>
+            <div class="search-form-number-blok">
+              <label class="search-form-number">
+                <span class="number-label">Взрослые:</span>
+                <button class="number-minus" type="button"></button>
+                <input class="number-field" type="number-field" min="0" value="2" readonly>
+                <button class="number-plus" type="button"></button>
+              </label>
+              <label class="search-form-number">
+                <span class="number-label">Дети:</span>
+                <button class="number-minus" type="button"></button>
+                <input class="number-field" type="number-field" min="0" value="2" readonly>
+                <button class="number-plus" type="button"></button>
+              </label>
+            </div>
             <button class="search-button" type="submit">Найти</button>
           </form>
         </section>
