--- a/10/index.html
+++ b/10/index.html
@@ -188,5 +188,42 @@
         </a>
       </footer>
     </div>
+    <div class="modal-container">
+      <div class="modal modal-search">
+        <button class="modal-close-button">
+          <span class="visually-hidden">Закрыть</span>
+        </button>
+        <section class="modal-content">
+          <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
+          <form class="search-form" action="https://echo.htmlacademy.ru/" method="get">
+            <label class="search-form-date">
+              <span class="date-label">Дата заезда:</span>
+              <input class="date-field" type="date" name="date-field" value="2020-04-27" required>
+            </label>
+            <p class="error-message">Мы не можем отправить вас в прошлое.</p>
+            <label class="search-form-date">
+              <span class="date-label">Дата выезда:</span>
+              <input class="date-field" type="date" name="date-field" value="2023-09-01" required>
+            </label>
+            <p class="success-message">На эти даты есть свободные номера. Пока есть.</p>
+            <div class="search-form-number-blok">
+              <label class="search-form-number">
+                <span class="number-label">Взрослые:</span>
+                <button class="number-minus" type="button"></button>
+                <input class="number-field" type="number-field" min="0" value="2" readonly>
+                <button class="number-plus" type="button"></button>
+              </label>
+              <label class="search-form-number">
+                <span class="number-label">Дети:</span>
+                <button class="number-minus" type="button"></button>
+                <input class="number-field" type="number-field" min="0" value="2" readonly>
+                <button class="number-plus" type="button"></button>
+              </label>
+            </div>
+            <button class="search-button" type="submit">Найти</button>
+          </form>
+        </section>
+      </div>
+    </div>
   </body>
 </html>
