--- a/index.html
+++ b/index.html
@@ -187,36 +187,49 @@
         </a>
       </footer>
     </div>
-    <div class="modal-container">
-      <div class="modal modal-search">
+    <div class="modal-container"> <!--Для отключенияя модального окна добавить класс modal-close-->
+      <div class="modal">
         <button class="modal-close-button">
           <span class="visually-hidden">Закрыть</span>
         </button>
         <section class="modal-content">
           <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
-          <form class="search-form" action="https://echo.htmlacademy.ru/" method="get">
+          <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
             <label class="search-form-date">
               <span class="date-label">Дата заезда:</span>
-              <input class="date-field" type="date" name="date-field" value="2020-04-27" required>
+              <input class="date-field" type="text" name="date-field" value="27 апреля 2020" required>
+              <button class="date-search" type="button"><span class="visually-hidden">Выберите дату</span></button>
             </label>
             <p class="error-message">Мы не можем отправить вас в прошлое.</p>
             <label class="search-form-date">
               <span class="date-label">Дата выезда:</span>
-              <input class="date-field" type="date" name="date-field" value="2023-09-01" required>
+              <input class="date-field" type="text" name="date-field" value="1 сентября 2023" required>
+              <button class="date-search" type="button"><span class="visually-hidden">Выберите дату</span></button>
             </label>
             <p class="success-message">На эти даты есть свободные номера. Пока есть.</p>
             <div class="search-form-number-blok">
               <label class="search-form-number">
-                <span class="number-label">Взрослые:</span>
-                <button class="number-minus" type="button"></button>
-                <input class="number-field" type="number-field" min="0" value="2" readonly>
-                <button class="number-plus" type="button"></button>
+                <span class="number-label number-label-adult">Взрослые:</span>
+                <button class="number-minus" type="button"><span class="visually-hidden">Уменьшите количество</span></button>
+                <input class="number-field" type="text" min="1" value="2" required>
+                <button class="number-plus" type="button"><span class="visually-hidden">Увеличьте количество</span></button>
               </label>
               <label class="search-form-number">
-                <span class="number-label">Дети:</span>
-                <button class="number-minus" type="button"></button>
-                <input class="number-field" type="number-field" min="0" value="2" readonly>
-                <button class="number-plus" type="button"></button>
+                <span class="number-label-children form-label-icon">
+                  <span class="number-label">Дети:</span>
+                  <span class="tooltip">
+                    <button class="tooltip-toggle" type="button">
+                      <svg class="tooltip-icon" width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="13" cy="13" r="13"/>
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M12 7H14V9H12V7ZM14 19H12V10H14V19Z" fill="white"/>
+                      </svg>
+                    </button>
+                    <span class="tooltip-text">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.</span>
+                  </span>
+                </span>
+                <button class="number-minus" type="button"><span class="visually-hidden">Уменьшите количество</span></button>
+                <input class="number-field" type="text" min="0" value="2">
+                <button class="number-plus" type="button"><span class="visually-hidden">Увеличьте количество</span></button>
               </label>
             </div>
             <button class="search-button" type="submit">Найти</button>
