Стилизация модального окна

--- a/index.html
+++ b/index.html
@@ -209,13 +209,15 @@
             <p class="success-message">На эти даты есть свободные номера. Пока есть.</p>
             <div class="search-form-number-blok">
               <label class="search-form-number">
-                <span class="number-label number-label-adult">Взрослые:</span>
+                <span class="number-label number-label-adult">
+                  <span class="number-label">Взрослые:</span>
+                </span>
                 <button class="number-minus" type="button"><span class="visually-hidden">Уменьшите количество</span></button>
                 <input class="number-field" type="text" min="1" value="2" required>
                 <button class="number-plus" type="button"><span class="visually-hidden">Увеличьте количество</span></button>
               </label>
               <label class="search-form-number">
-                <span class="number-label-children form-label-icon">
+                <span class="number-label-children">
                   <span class="number-label">Дети:</span>
                   <span class="tooltip">
                     <button class="tooltip-toggle" type="button">
