Еще одна проверка

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
               <a class="navigation-link navigation-link-current" href="index.html">Главная</a>
             </li><li class="navigation-item">
               <a class="navigation-link navigation-link-current" href="index.html">Главная</a>
+            </li><li class="navigation-item">
+              <a class="navigation-link navigation-link-current" href="index.html">Главная</a>
+            </li><li class="navigation-item">
+              <a class="navigation-link navigation-link-current" href="index.html">Главная</a>
             </li>
             <li class="navigation-item">
               <a class="navigation-link" href="#">О Седоне</a>
