--- a/catalog.html
+++ b/catalog.html
@@ -116,11 +116,11 @@
                 <legend class="catalog-filter-title">Стоимость, ₽:</legend>
                   <div class="cost-min-max">
                     <label class="control-cost">
-                      <input class="control-input-cost cost-field cost-from" type="number" name="min-price" min="0" value="0">
+                      <input class="control-input-cost cost-from" type="number" name="min-price" min="0" value="0">
                       <span class="cost-text">от</span>
                     </label>
                     <label class="control-cost">
-                      <input class="control-input-cost cost-field cost-to" type="number" name="max-price" max="9000" value="9000">
+                      <input class="control-input-cost cost-to" type="number" name="max-price" max="9000" value="9000">
                       <span class="cost-text">до</span>
                     </label>
                   </div>
@@ -172,7 +172,6 @@
           </div>
 
           <ul class="product-list">
-
             <li class="product-item">
               <a class="product-image-link" href="#" tabindex=-1>
                 <img class="product-image" src="images/cards/amara.jpg" width="300" height="212" alt="Вид звездного неба из ущелья">
