--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         </a>
       </footer>
     </div>
-    <div class="modal-container"> <!--Для отключенияя модального окна добавить класс modal-close-->
+    <div class="modal-container modal-close"> <!--Для подключенияя модального окна убрать класс modal-close-->
       <div class="modal">
         <button class="modal-close-button" type="button">
           <span class="visually-hidden">Закрыть</span>
@@ -221,8 +221,8 @@
                 </div>
               </div>
               <div class="number-block">
-                <label class="number-label number-label-group" for="number-input-children">
-                  <span class="number-label-children">Дети:</span>
+                <div class="number-label number-label-group">
+                  <label class="number-label-children"  for="number-input-children">Дети:</label>
                   <span class="tooltip">
                     <button class="tooltip-toggle" type="button" aria-labelledby="tooltip-label-children">
                       <svg class="tooltip-icon" width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -232,7 +232,7 @@
                     </button>
                     <span class="tooltip-text" role="tooltip" id="tooltip-label-children">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.</span>
                   </span>
-                </label>
+                </div>
                 <div class="minus-plus-block">
                   <button class="number-minus" type="button"><span class="visually-hidden">Уменьшите количество</span></button>
                   <input class="number-field" type="number" name="number" min="1" value="2" id="number-input-children" required>
