Pixel Perfct для модального окна

--- a/index.html
+++ b/index.html
@@ -200,12 +200,12 @@
           <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
           <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
             <label class="search-form-date">
-              <span class="date-label">Дата заезда:</span>
+              <span class="date-label">Дата Заезда:</span>
               <input class="date-field" type="text" name="date-field" value="27 апреля 2020" placeholder="Укажите дату" required>
             </label>
             <p class="error-message">Мы не можем отправить вас в прошлое.</p>
             <label class="search-form-date">
-              <span class="date-label">Дата выезда:</span>
+              <span class="date-label">Дата Выезда:</span>
               <input class="date-field" type="text" name="date-field" value="1 сентября 2023" placeholder="Укажите дату" required>
             </label>
             <p class="success-message">На эти даты есть свободные номера. Пока есть.</p>
@@ -230,7 +230,7 @@
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M12 7H14V9H12V7ZM14 19H12V10H14V19Z" fill="white"/>
                       </svg>
                     </button>
-                    <span class="tooltip-text" role="tooltip" id="tooltip-label-children">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.</span>
+                    <span class="tooltip-text" role="tooltip" id="tooltip-label-children">Укажите количество детей,<br>которые будут с вами, возраст<br>которых от 6 до 18 лет. Дети<br>до 6 лет размещаются<br>бесплатно.</span>
                   </span>
                 </div>
                 <div class="minus-plus-block">
